[package]
name = "mcsl_compiler"
version = "0.1.0"
edition = "2021"
description = "MCSL - Minecraft Structured Language Compiler for 1.21.1 datapacks"

[dependencies]
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.10"
